# roverdevkit

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  project_brief.md  project_log.md  project_plan.md  pyproject.toml
data/: README.md  mass_validation_set.csv  published_rovers.csv  published_traverse_data.csv  soil_simulants.csv
data/analytical/: SCHEMA.md
data/validation/: README.md
notebooks/: 00_real_rover_validation.ipynb  01_interactive_exploration.ipynb  02_pareto_fronts.ipynb  03_rediscover_real_rovers.ipynb  04_reproduce_paper.ipynb
pretrained/: README.md
reports/week11_intervals_v5/: coverage.csv  fit_seconds.csv  median_sanity.csv
reports/week11_tuned_v5/: study_energy_margin_raw_pct.csv  study_motor_torque_ok.csv  study_range_km.csv  study_slope_capability_deg.csv  study_total_mass_kg.csv  tuned_acceptance_gate.csv  tuned_best_params.json  tuned_registry_sanity.csv  tuned_summary.csv  tuned_test_metrics.parquet
reports/week6_baselines_v1/: acceptance_gate.csv  fit_seconds.csv  metrics_long.parquet  registry_sanity.csv  test_per_family.csv  test_summary.csv
reports/week6_baselines_v2/: acceptance_gate.csv  fit_seconds.csv  metrics_long.parquet  registry_sanity.csv  test_per_family.csv  test_summary.csv
reports/week7_5_gate/: correction_fit.csv  correction_fit.meta.json  feasibility_direction.csv  gate_decision.md  gate_summary.csv  spearman_mobility.csv
reports/week7_7_bakeoff/: bakeoff_long.parquet  bakeoff_summary.csv  bakeoff_wide.parquet  decision.md
reports/week8_baselines_v4/: SUMMARY.md  acceptance_gate.csv  fit_seconds.csv  metrics_long.parquet  registry_sanity.csv  test_per_family.csv  test_summary.csv
reports/week8_intervals_v4/: SUMMARY.md  coverage.csv  fit_seconds.csv  median_sanity.csv
reports/week8_tuned_v4/: SUMMARY.md  study_energy_margin_raw_pct.csv  study_motor_torque_ok.csv  study_range_km.csv  study_slope_capability_deg.csv  study_total_mass_kg.csv  tuned_acceptance_gate.csv  tuned_best_params.json  tuned_registry_sanity.csv  tuned_summary.csv  tuned_test_metrics.parquet
roverdevkit/: __init__.py  schema.py
roverdevkit/mass/: __init__.py  parametric_mers.py  validation.py
roverdevkit/mission/: __init__.py  capability.py  evaluator.py  scenarios.py  traverse_sim.py
roverdevkit/mission/configs/: chandrayaan3_pragyan.yaml  change4_yutu2_per_lunar_day.yaml  crater_rim_survey.yaml  equatorial_mare_traverse.yaml  highland_slope_capability.yaml  moonranger_polar_demo.yaml  mpf_sojourner_ares_vallis.yaml  polar_prospecting.yaml  rashid_atlas_crater.yaml
roverdevkit/power/: __init__.py  battery.py  solar.py  thermal.py
roverdevkit/surrogate/: __init__.py  baselines.py  dataset.py  features.py  models.py  sampling.py  train.py  tuning.py  uncertainty.py
roverdevkit/terramechanics/: __init__.py  bekker_wong.py  correction_model.py  pychrono_scm.py  scm_sweep.py  scm_wrapper.py  soils.py
roverdevkit/tradespace/: __init__.py  design_rules.py  optimizer.py  sweeps.py  visualize.py
roverdevkit/validation/: __init__.py  cross_scenario.py  error_budget.py  experimental_comparison.py  rover_comparison.py  rover_rediscovery.py  rover_registry.py
scripts/: build_dataset.py  calibrate_intervals.py  run_bakeoff.py  run_baselines.py  run_gate_sweep.py  run_scm_sweep.py  train_correction_model.py  tune_baselines.py
tests/: conftest.py  test_capability.py  test_correction_model.py  test_cross_scenario.py  test_mass.py  test_mission_evaluator.py  test_power.py  test_pychrono_scm.py  test_rover_comparison.py  test_scenarios.py  test_schema.py  test_scm_sweep.py  test_soils.py  test_surrogate.py  test_surrogate_baselines.py  test_surrogate_dataset.py  test_surrogate_sampling.py  test_surrogate_tuning.py  test_surrogate_uncertainty.py  test_terramechanics.py  test_thermal.py  test_tradespace_sweeps.py  test_traverse_sim.py
webapp/: README.md
webapp/backend/: __init__.py  app.py  config.py  loaders.py  main.py  schemas.py
webapp/backend/routes/: __init__.py  evaluate.py  health.py  predict.py  registry.py  scenarios.py  sweep.py
webapp/backend/services/: __init__.py  evaluate.py  predict.py  sweep.py
webapp/backend/tests/: conftest.py  test_evaluate.py  test_health.py  test_predict.py  test_registry.py  test_scenarios.py  test_sweep.py
webapp/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webapp/frontend/src/: App.tsx  index.css
webapp/frontend/src/components/: about-model-dialog.tsx  app-shell.tsx  constraint-details-dialog.tsx  design-form.tsx  design-slider-field.tsx  prediction-chart.tsx  prediction-panel.tsx  registry-overlay-picker.tsx  scenario-picker.tsx  sweep-chart.tsx  sweep-config.tsx  sweep-sensitivity-hint.tsx
webapp/frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  slider.tsx
webapp/frontend/src/hooks/: use-evaluate.ts  use-health.ts  use-predict.ts  use-registry.ts  use-scenarios.ts  use-sweep.ts
webapp/frontend/src/lib/: api.ts  plotly.ts  rover-colors.ts  utils.ts
webapp/frontend/src/pages/: design-explorer.tsx  parametric-sweep.tsx
webapp/frontend/src/store/: design-store.ts  sweep-store.ts  view-store.ts
webapp/frontend/src/types/: api.ts  plotly-dist-min.d.ts
